# AlexanderPilipchukPet-Projects

./: README.md
fft_signal_lab/: .gitignore  CMakeLists.txt  README.md
fft_signal_lab/examples/: README_TESTS.md  test_detect_denoise_noisy_mixture.csv  test_reconstruct_bandlimited.csv
fft_signal_lab/include/: cli.h  fft.h  generator.h  reconstruction.h  signal.h  spectrum.h  window.h
fft_signal_lab/src/: cli.cpp  fft.cpp  generator.cpp  main.cpp  reconstruction.cpp  signal.cpp  spectrum.cpp  window.cpp
signalresearch/: README.md  main.cpp  results.csv
